# tokenvis

./: .gitignore  Makefile  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  trace-loader.ts
app/api/traces/: route.ts
backend/: data.py  example_trace.json  main.py  models.py  requirements.txt
backend/tests/: test_api.py
components/: agent-edge.tsx  span-node.tsx  trace-canvas.tsx  trace-selector.tsx  trace-viewer-shell.tsx  trace-viewer.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  sheet.tsx
db/: index.ts  schema.ts
docs/: trace-format.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  focus.test.ts  focus.ts  main.tsx  style.css  threads.test.ts  threads.ts  types.ts
frontend/src/components/: DetailPanel.test.tsx  DetailPanel.tsx
frontend/src/store/: useSelection.ts  useViewport.ts
lib/: canvas-config.ts  layout.ts  palette.ts  trace-schemas.ts  use-trace-layout.ts
openspec/: project.md
openspec/changes/add-deterministic-layout/: proposal.md  tasks.md
openspec/changes/add-enhanced-test-traces/: proposal.md
openspec/changes/add-layout-hook/: proposal.md  tasks.md
openspec/changes/add-phase1-visualization/: tasks.md
openspec/changes/add-phase2-causality-display/: design.md  tasks.md
openspec/changes/add-phase4-polish/: proposal.md  tasks.md
openspec/changes/add-react-flow-canvas/: proposal.md  tasks.md
scripts/: bench-layout.ts  seed.ts
(+63 files in other folders)
