[project]
name = "tokenvis"
version = "0.1.0"
description = "ChronoMesh backend + tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "sqlalchemy==2.0.29",
  "pydantic==2.7.1",
  "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = { find = { include = ["backend*"], exclude = ["frontend*", "openspec*", "tests*"] } }

[tool.uv]
cache-dir = ".uv-cache"
python-preference = "managed"
dev-dependencies = ["pytest==8.2.2"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
